# py-allrecipes

./: 404.html  README.md  example.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint-test.yml  publish.yml
docs/: index.md  search.md
examples/: terminal-cook.py
py_allrecipes/: __init__.py  recipe.py  search.py
search/: index.html  search_index.json
src/py_allrecipes/: __init__.py  recipe.py  search.py
tests/: tests.py
