[project]
name = "py-allrecipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zachary Jones", email = "145171712+zacharyj12@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4"
]

[project.scripts]
py-allrecipes = "py_allrecipes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
