[project]
name = "py-allrecipes"
version = "0.1.0"
description = "Python API to access the Allrecipes platform."
readme = "README.md"
authors = [
    { name = "Zachary Jones", email = "zacharyj@orbical.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4"
]

[project.scripts]
py-allrecipes = "py_allrecipes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
